force-app/main/default/objects/Parent__c/fields/Active_Program_Payments__c.field-meta.xml
<CustomField>
    <fullName>Active_Program_Payments__c</fullName>
    <inlineHelpText>Total Active Program Payments</inlineHelpText>
    <label>Active Program Payments</label>
    <summarizedField>Club_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Club_Payment__c.Program_Status__c</field>
        <operation>equals</operation>
        <value>Active</value>
    </summaryFilterItems>
    <summaryForeignKey>Club_Payment__c.Parent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>