force-app/main/default/objects/Parent__c/fields/Cumulated_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Cumulated_Amount_Paid__c</fullName>
    <label>Cumulated Amount Paid</label>
    <summarizedField>Club_Payment__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Club_Payment__c.Program_Status__c</field>
        <operation>equals</operation>
        <value>Ended</value>
    </summaryFilterItems>
    <summaryForeignKey>Club_Payment__c.Parent__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>