force-app/main/default/objects/Parent__c/fields/Cumulated_Program_Fees__c.field-meta.xml
<CustomField>
    <fullName>Cumulated_Program_Fees__c</fullName>
    <label>Cumulated Program Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>