force-app/main/default/objects/Parent__c/fields/Ended_Program_Balance__c.field-meta.xml
<CustomField>
    <fullName>Ended_Program_Balance__c</fullName>
    <formula>Cumulated_Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ended Program Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>