force-app/main/default/objects/Parent__c/fields/High_Shoolers__c.field-meta.xml
<CustomField>
    <fullName>High_Shoolers__c</fullName>
    <inlineHelpText>How many High-Schooler this parent has.</inlineHelpText>
    <label>High_Shoolers</label>
    <summaryFilterItems>
        <field>Student__c.Grade__c</field>
        <operation>equals</operation>
        <value>High-Schooler</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Student__c.Active_Enrollments__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Student__c.Parent_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>