force-app/main/default/objects/Parent__c/fields/Number_of_Kids__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Kids__c</fullName>
    <label>Number of Kids</label>
    <summaryFilterItems>
        <field>Student__c.Grade__c</field>
        <operation>notEqual</operation>
        <value>High-Schooler</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Student__c.Active_Enrollments__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>Student__c.Parent_Name__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>