force-app/main/default/objects/Parent__c/fields/Program_Fees__c.field-meta.xml
<CustomField>
    <fullName>Program_Fees__c</fullName>
    <inlineHelpText>Total Program Fees for all kids of this parent</inlineHelpText>
    <label>Program Fees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>