force-app/main/default/objects/Parent__c/fields/Recently_Added__c.field-meta.xml
<CustomField>
    <fullName>Recently_Added__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Recently Added Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>