force-app/main/default/objects/Parent__c/fields/Recently_Ended_Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Recently_Ended_Program_Name__c</fullName>
    <label>Recently Ended Program Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>