force-app/main/default/objects/Parent__c/listViews/Alina_List.listView-meta.xml
<ListView>
    <fullName>Alina_List</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Number_of_Kids__c</columns>
    <columns>Cumulated_Amount_Paid__c</columns>
    <columns>Remaining_Balance__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Remaining_Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Alina List</label>
</ListView>