force-app/main/default/objects/Parent__c/listViews/Nurzhamal_List.listView-meta.xml
<ListView>
    <fullName>Nurzhamal_List</fullName>
    <columns>NAME</columns>
    <columns>Phone__c</columns>
    <columns>Remaining_Balance__c</columns>
    <columns>Note__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Remaining_Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Number_of_Kids__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Nurzhamal List</label>
</ListView>