force-app/main/default/objects/Parent__c/listViews/Payments_Done.listView-meta.xml
<ListView>
    <fullName>Payments_Done</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Kids__c</columns>
    <columns>Total_Balance__c</columns>
    <columns>Active_Program_Payments__c</columns>
    <columns>Remaining_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Remaining_Balance__c</field>
        <operation>lessOrEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Number_of_Kids__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Payments Done</label>
</ListView>