force-app/main/default/objects/Parent__c/listViews/Pending_Payments.listView-meta.xml
<ListView>
    <fullName>Pending_Payments</fullName>
    <columns>NAME</columns>
    <columns>Number_of_Kids__c</columns>
    <columns>Remaining_Balance__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Remaining_Balance__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Pending Payments</label>
</ListView>